test/files/neg/xml-pcdata.scala
object foo {
  val bar = "baz"
  val cdata =
    <![CDATA[]]>
    <![CDATA[{bar}]]>
}
