test/files/neg/xml-pcdata.check
xml-pcdata.scala:4: error: To compile XML syntax, the scala.xml package must be on the classpath.
Please see https://github.com/scala/scala-xml for details.
    <![CDATA[]]>
    ^
1 error
